# album

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
design/: palette.md
front/: app.js  index.html
front/assets/style/: color.scss  header.scss  main.scss  picture.scss  site.scss  style.css  upload.scss
front/style/: header.scss  main.scss  picture.scss  toast.scss
src/: lib.rs
src/components/: albums.rs  cpicture.rs  ctoast.rs  header.rs  home.rs  login.rs  pictures.rs  upload.rs
src/model/: toast.rs
