[package]
name = "album"
version = "0.1.0"
authors = ["TuntematonSotilas <gatobael@gmail.com>"]
edition = "2018"
description = "web assembly with rust"
repository = "https://github.com/TuntematonSotilas/album"
license= "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.4"
wasm-bindgen = "0.2.47"
futures = "0.1.28"
serde = "1.0.98"